--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -4,6 +4,11 @@ pipeline {
         skipStagesAfterUnstable()
     }
     stages {
+        stage("Checkout Java-Project") {
+            steps {
+                git branch: 'master', url: 'https://github.com/nag9s/simple-java-maven-app.git'
+            }
+        }
         stage("Clean - Java-Project") {
             steps {
                 sh 'mvn clean'
